# Cornifer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  customerrors.h  filematcher.cpp  filematcher.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.ui  searcherror.h
gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
inc/: concurrentfilesearcher.h  logger.h  wildcarderror.h  wildcardmatcher.h
src/: concurrentfilesearcher.cpp  logger.cpp  main.cpp  wildcardmatcher.cpp
tests/: test_wildcardmatcher.cpp
